--- a/assets/personal_project.css
+++ b/assets/personal_project.css
@@ -3,6 +3,8 @@
 	.headingcolor1{
 		color:black;
 		background-color:yellow;
+		padding:.50%;
+		justify-content:center;
 	}
 	#textfont1{
 		font-family:Montserrat, sans-serif;
@@ -23,9 +25,16 @@
 	.nav{
 		display:flex;
 		flex-direction:row;
-		justify-content:space-around;
+		justify-content:space-evenly;
 		background-color:black;
 		color:white;
+		padding:1%;
+		
+	}
+	#tab{
+		border:1px solid white;
+		padding:.25%;
+	
 	}
 	.center{
 		display:flex;
@@ -42,7 +51,7 @@
 	.column{
 		display:flex;
 		flex-direction:column;
-		align-items:center
+		align-items:center;
 	}
 	.border{
 		border: 3px solid;
@@ -51,6 +60,27 @@
 		color:#cccccc;
 		display:flex;
 		align-items:center;
+	}
+	a:link{
+  color: black;
+  background-color: transparent;
+  text-decoration: underline;
+  
+	}	
+	a:visited{
+	  color: blue;
+	  background-color: transparent;
+	  text-decoration: underline;
+	}
+	a:hover{
+	  color: yellow;
+	  background-color: transparent;
+	  text-decoration: underline;
+	}
+	a:active{
+	  color: grey;
+	  background-color: transparent;
+	  text-decoration: underline;
 	}
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
