--- a/assets/personal_project.css
+++ b/assets/personal_project.css
@@ -1,9 +1,12 @@
-
+html,body{
+	margin:0;
+	padding:0
+}
 	
 	.headingcolor1{
 		color:black;
 		background-color:yellow;
-		padding:.50%;
+		padding:0px;
 		justify-content:center;
 	}
 	#textfont1{
@@ -14,7 +17,7 @@
 		flex-grow:1
 	}
 	#flex2{
-		flex-grow:2
+		flex-grow:5
 	}
 	.group{
 		display:flex;
@@ -50,7 +53,6 @@
 		display:flex;
 		flex-direction:column;
 		align-items:center;
-		height:100%;
 		width:100%
 	}
 	.row{
@@ -73,22 +75,23 @@
 		justify-content:center;
 	}
 	{
-		background-color:grey:
-		padding:2%;
-		width:100%;	
+			
 	}
 	.bottom{
 		background-color:grey;
 		padding:2%;
 		width:100%;	
+		
 	}
 	td{
-		padding:.25%
+		
+		
+		padding:.25%;
+		
 	}
 	
 	a{
 		color:#cccccc;
-		display:flex;
 		align-items:center;
 	}
 	a:link{
@@ -98,12 +101,12 @@
   
 	}	
 	a:visited{
-	  color: blue;
+	  color: yellow;
 	  background-color: transparent;
 	  text-decoration: underline;
 	}
 	a:hover{
-	  color: yellow;
+	  color: blue;
 	  background-color: transparent;
 	  text-decoration: underline;
 	}
@@ -112,6 +115,12 @@
 	  background-color: transparent;
 	  text-decoration: underline;
 	}
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+		
+		.nav a, .nav a:visited{
+			color:yellow;
+			
+		}
+		
+		.nav a:hover{
+			color:purple;
+		}
